# monstromaker

./: .gitignore  .pydocstyle  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.cfg
doc/: api.rst  conf.py  index.rst  user_guide.rst
doc/_static/: custom.css
monstromaker/: __main__.py  cards.py
